--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
+  "name": "my-new-node-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "tsc && node dist/server.js",
+    "build": "tsc -p tsconfig.json"
+  },
   "dependencies": {
     "@prisma/client": "^4.14.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-fetch": "^2.6.4"
   },
   "devDependencies": {
-    "prisma": "^4.14.0"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.7",
+    "@types/node-fetch": "^2.6.4",
+    "prisma": "^4.14.0",
+    "typescript": "^5.0.4"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
